2003-10-28  Pavel Roskin  <proski@gnu.org>

	* vfs.c (mc_ungetlocalcopy): Free local path here, not in class
	implementations.
	* vfs.h (struct vfs_s_class): Constify "local" argument for
	ungetlocalcopy.  Adjust all implementations.

	* direntry.c (vfs_s_init_class): Use our getlocalcopy for remote
	filesystems that cache files, not for archives.
	(vfs_s_getlocalcopy): Corresponding changes.

	* direntry.c (vfs_s_init_class): Improve interface to allow more
	code reuse.  Change all callers.
	(vfs_s_getlocalcopy): New implementation.  Don't use
	mc_def_getlocalcopy().  Use vfs_s_open() to create local copy.
	(vfs_s_ungetlocalcopy): New function.
	* xdirentry.h: Add new field "flags" to struct vfs_s_subclass.
	* extfs.c (extfs_ungetlocalcopy): Don't use
	mc_def_ungetlocalcopy() in the dead branch.
	* vfs.c (mc_def_getlocalcopy): Make static.
	(mc_def_ungetlocalcopy): Likewise.

2003-10-27  Pavel Roskin  <proski@gnu.org>

	* vfs.h: Constify some arguments for many functions.
	* xdirentry.h: Likewise.  Adjust all dependencies.

	* *.c: Rename functions that don't have an a prefix indicating
	what file they are defined in.  This simplifies debugging.

	* vfs.c (mc_def_getlocalcopy): Use O_LINEAR when retrieving the
	remote file.  This avoids an extra temporary file.

	* cpio.c (cpio_ungetlocalcopy): Remove.
	* tar.c (tar_ungetlocalcopy): Likewise.
	* vfs.c (mc_def_ungetlocalcopy): Add support for read-only
	filesystems.

2003-10-26  Pavel Roskin  <proski@gnu.org>

	* direntry.c (vfs_s_find_inode): Only allow search from root.
	Change second argument to superblock to prevent abuse.

	* direntry.c (vfs_s_find_entry_tree): Eliminate buffer of fixed
	size.  Don't prepare path for vfs_s_resolve_symlink().
	(vfs_s_resolve_symlink): Remove unused argument "path".

	* direntry.c (vfs_s_add_dots): Remove.  Fix all callers.
	(vfs_s_free_inode): Remove support for "." and ".." entries.
	* ftpfs.c (dir_load): Likewise.