@@ -1,5 +1,12 @@
 2003-10-28  Pavel Roskin  <proski@gnu.org>
 
+	* utilvfs.c (vfs_mkstemps): New function - create temporary file
+	with the name resembling the original, but safe for scripts.
+	* direntry.c (vfs_s_open): Use it.
+	(vfs_s_retrieve_file): Likewise.
+	* extfs.c (extfs_open): Likewise.
+	* sfs.c (sfs_redirect): Likewise.
+
 	* vfs.c (mc_ungetlocalcopy): Free local path here, not in class
 	implementations.
 	* vfs.h (struct vfs_s_class): Constify "local" argument for
